# chat

./: .gitignore  LICENSE  README.md
client/llfcchat/: ChatItemBase.cpp  ChatView.cpp  ChatView.h  TextBubble.cpp  adduseritem.cpp  adduseritem.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  clickedoncelabel.h  contactuserlist.cpp  contactuserlist.h  conuseritem.cpp  conuseritem.h  conuseritem.ui  (+47 more)
client/llfcchat/style/: stylesheet.qss
server/ChatServer/: CServer.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UserMgr.cpp  config.ini  const.h  data.h  message.grpc.pb.h  message.pb.cc  message.proto
server/ChatServer2/: CServer.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  const.h  data.h  message.grpc.pb.cc  message.pb.h  message.proto
server/GateServer/: CServer.cpp  CServer.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  PropertySheet.props  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.h  VerifyGrpcClient.h  config.ini  const.cpp  const.h  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
server/StatusServer/: MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.h  message.proto
server/VarifyServer/: config.json  message.proto  package-lock.json  package.json  redis.js  server.js
server/chatservo1/: CMakeLists.txt  ChatServer.cpp
server/chatservo1/ChatServer/AsioIOService/: AsioIOServicePool.cpp
server/chatservo1/ChatServer/CServer/: CServer.h  CSession.cpp  CSession.h  LogicSystem.cpp
server/chatservo1/ChatServer/ChatGrpc/: ChatGrpcClient.cpp  ChatGrpcClient.h
server/chatservo1/ChatServer/Config/: ConfigMgr.h
server/chatservo1/ChatServer/Impl/: ChatServiceImpl.cpp  ChatServiceImpl.h
server/chatservo1/ChatServer/Message/: MsgNode.cpp  MsgNode.h
server/chatservo1/ChatServer/MySQL/: MysqlMgr.cpp
server/chatservo1/ChatServer/Redis/: RedisMgr.cpp
server/chatservo1/ChatServer/StatusGrpc/: StatusGrpcClient.h
server/chatservo1/ChatServer/User/: UserMgr.cpp
server/chatservo2/: CMakeLists.txt
server/chatservo2/ChatServer/AsioIOService/: AsioIOServicePool.h
server/chatservo2/ChatServer/Base/: Singleton.h
server/chatservo2/ChatServer/CServer/: CServer.cpp  LogicSystem.h
server/chatservo2/ChatServer/Config/: const.h  data.h
server/chatservo2/ChatServer/MySQL/: MysqlDao.cpp  MysqlDao.h  MysqlMgr.h
server/chatservo2/ChatServer/Redis/: RedisMgr.h
server/chatservo2/ChatServer/StatusGrpc/: StatusGrpcClient.cpp
server/chatservo2/ChatServer/User/: UserMgr.h
server/chatservo2/protos/src/: message.pb.cc  message.pb.h
server/gateservo/: CMakeLists.txt  GateServer.cpp
server/gateservo/GateServer/AsioIOService/: AsioIOServicePool.h
server/gateservo/GateServer/CServer/: CServer.cpp  CServer.h  LogicSystem.cpp  LogicSystem.h
server/gateservo/GateServer/Config/: ConfigMgr.cpp  ConfigMgr.h  const.h
server/gateservo/GateServer/HTTP/: HttpConnection.cpp  HttpConnection.h
server/gateservo/GateServer/MySQL/: MysqlDao.cpp  MysqlDao.h  MysqlMgr.h
server/gateservo/GateServer/Redis/: RedisMgr.cpp  RedisMgr.h
server/gateservo/GateServer/StatusGrpc/: StatusGrpcClient.h
server/gateservo/GateServer/VerifyGrpc/: VerifyGrpcClient.cpp  VerifyGrpcClient.h
server/gateservo/protos/src/: message.pb.h
server/statusservo/: CMakeLists.txt  StatusServer.cpp
server/statusservo/StatusServer/Base/: Singleton.h
server/statusservo/StatusServer/ChatGrpc/: ChatGrpcClient.cpp  ChatGrpcClient.h
sql备份/: llfc.sql
学习笔记/: day01-项目结构概述.md  day02-客户端Http管理类设计.md
开发文档/: day02-客户端Http管理类设计.md  day04-beast搭建http服务器.md  day05-处理post请求并解析json数据.md  day07-visualstudio配置grpc.md  day08-邮箱认证服务.md  day09-redis服务搭建.md  day10-多服务验证码派发功能调试.md  day11-注册功能.md  day12-注册界面完善.md  day14-登录功能.md  day15-客户端Tcp管理类设计.md  day18-聊天主界面.md  day20-动态加载聊天列表.md  day28-好友查询和申请.md
(+10 files in other folders)
